<org.urbanlaunchpad.flocktracker.views.NavButtonsView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/questionButtons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/previous_question_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/previous_question_desc"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/left_arrow" >
    </ImageView>

    <ImageView
        android:id="@+id/submit_survey_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/submit_question_desc"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/submit_button" >
    </ImageView>

    <ImageView
        android:id="@+id/next_question_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/next_question_desc"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/right_arrow" >
    </ImageView>

</org.urbanlaunchpad.flocktracker.views.NavButtonsView>