<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="left|right"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Hub_page_fragment" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="1.71"
        android:paddingTop="25dp" >

        <ImageView
            android:id="@+id/start_trip_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/start_trip_bus_desc"
            android:src="@drawable/ft_red_st" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/startSurveyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/start_survey_button_desc"
            android:padding="5dp"
            android:src="@drawable/survey" />

        <ImageView
            android:id="@+id/statsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/stats_button_desc"
            android:padding="5dp"
            android:src="@drawable/stats" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:baselineAligned="false"
        android:paddingBottom="35dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/moreMenButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/more_men_button_desc"
                android:padding="10dp"
                android:src="@drawable/up_arrow_blue" />

            <TextView
                android:id="@+id/maleCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/person_count_default"
                android:textColor="@color/blue_men"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/fewerMenButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/fewer_men_button_desc"
                android:padding="10dp"
                android:src="@drawable/down_arrow_blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:id="@+id/menIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="-15dp"
                android:layout_weight="1"
                android:contentDescription="@string/men_icon_desc"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/ft_fig_male" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/totalPersonCount"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/person_count_default"
                android:textColor="@color/text_color_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:id="@+id/womenIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="-15dp"
                android:layout_weight="1"
                android:contentDescription="@string/women_icon_desc"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/ft_fig_fem" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/moreWomenButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/more_women_button_desc"
                android:padding="10dp"
                android:src="@drawable/up_arrow_pink" />

            <TextView
                android:id="@+id/femaleCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/person_count_default"
                android:textColor="@color/pink_women"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/fewerWomenButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/fewer_women_button_desc"
                android:padding="10dp"
                android:src="@drawable/down_arrow_pink" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>