<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Trip Time Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_triptime" />

        <TextView
            android:id="@+id/tripTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="#fff"
            android:textSize="60sp" />
    </LinearLayout>

    <!-- Trip Distance Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_tripdist" />

        <TextView
            android:id="@+id/tripDistance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="#fff"
            android:textSize="60sp" />
    </LinearLayout>

    <!-- User Greeting Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/user_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-50dp"
            android:layout_marginStart="-50dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/default_greeting"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Surveys Completed Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_survcomp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:text="@string/surveys_completed"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/surveysCompleted"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Rides Completed Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_ridercomp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:text="@string/rides_completed"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ridesCompleted"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Total Distance Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_distcomp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:text="@string/total_distance"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalDistance"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Current Address Row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/start_survey_button_desc"
            android:paddingRight="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ft_location" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/current_address"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currentAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/default_address"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>