<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".Welcomes" >

    <FrameLayout
        style="@style/No_background"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="6"
        android:padding="0dp" >

        <ImageView
            style="@style/No_background"
            android:id="@+id/app_big_icon_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/app_big_icon_desc"
            android:padding="40dp"
            android:src="@drawable/ft_big_icon" />
    </FrameLayout>

    <LinearLayout
        style="@style/No_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <FrameLayout
            style="@style/No_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp" >

            <ImageView
                style="@style/No_background"
                android:id="@+id/mobility_futures_colaborative_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/mobility_futures_colaborative_desc"
                android:padding="0dp"
                android:src="@drawable/mobility_futures_colaborative" />
        </FrameLayout>

        <FrameLayout
            style="@style/No_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp" >

            <ImageView
                style="@style/No_background"
                android:id="@+id/mit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/mit_desc"
                android:padding="0dp"
                android:src="@drawable/mit" />
        </FrameLayout>

        <FrameLayout
            style="@style/No_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp" >

            <ImageView
                style="@style/No_background"
                android:id="@+id/urban_launchpad_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/urban_launchpad_desc"
                android:padding="0dp"
                android:src="@drawable/urban_launchpad_mx" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>